syntax = "proto3";

package pb;

import "error.proto";

service Workflow {
    rpc Start(StartWorkflowRequest) returns (StartWorkflowReply) {}
    rpc ListTask(ListTaskRequest) returns (ListTaskReply) {}
    rpc HandleTask(HandleTaskRequest) returns (HandleTaskReply) {}
}

message StartWorkflowRequest {
    string type = 1;
    string name = 2;
    string user_id = 3;
}

message StartWorkflowReply {
    error err = 1;
}

message ListTaskRequest {
}

message ListTaskReply {
}

message HandleTaskRequest {
}

message HandleTaskReply {
}