syntax = "proto3";

package pb;

service User {
    rpc Login(LoginRequest) returns (LoginReply) {}
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginReply {
    string token = 1;
}